loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__std_serde_json_import.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use json::{Deserialize as _, Serialize as _};
pub use crate::__incan_std::serde::json;
#[derive(
    ::serde::Serialize,
    ::serde::Deserialize,
    Debug,
    Clone,
    incan_derive::FieldInfo,
    incan_derive::IncanClass
)]
struct Config {
    host: String,
    port: i64,
    debug: bool,
}
impl incan_std_core::reflection::HasClassName for Config {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Config {
    fn __class_name__() -> &'static str {
        "Config"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Config {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Config {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 3] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("host"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("host"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("port"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("port"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("debug"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("debug"),
                type_name: incan_std_core::frozen::FrozenStr::new("bool"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Config {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "host" => Some(format!("{}", self.host)),
            "port" => Some(format!("{}", self.port)),
            "debug" => Some(format!("{}", self.debug)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("host".to_string(), format!("{}", self.host)), ("port".to_string(),
            format!("{}", self.port)), ("debug".to_string(), format!("{}", self.debug))
        ]
    }
}
impl json::Serialize for Config {
    fn to_json(&self) -> String {
        incan_std_data::json::__private::stringify_or_raise(self, stringify!(Config))
    }
}
impl json::Deserialize for Config {
    fn from_json(json_str: String) -> Result<Self, String> {
        incan_std_data::json::__private::parse_or_error(&json_str)
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!(
        "{}", crate ::__incan_std::serde::json::Serialize::to_json(& Config { host :
        "localhost".to_string(), port : 8080, debug : true },)
    );
}
